docs: rewrite README with modernized architecture, prerequisites and build guide
The README still described the Spark 3.0.0 / JDK 8 / Log4j baseline. Replace it
with the current modernized stack and a practical build/run guide:

- Architecture: mermaid diagram + component table (proxy, frontend, the JVM
  services, notebooks, rabbitmq, h2, mail, and the spark executor) and the
  two-sbt-build layout (root + seahorse-workflow-executor).
- Technology Stack: Spark 3.4.4 / Scala 2.13.12 / JDK 17 / Pekko / Python 3.12 /
  Jupyter Server 2 / webpack-2 frontend on Node 22.
- Prerequisites for building (JDK 17, sbt 1.8.2, Docker + Compose v2, python3,
  Node 22 for the frontend, disk).
- Building: sbt compile/test, then Docker images via build/manage-docker.py —
  single image (-i), several, and the full set (--all, 12 images; authorization
  and documentation come from prebuilt quay images).
- Deploying: generate docker-compose.py output and `docker compose up`; reachable
  through the proxy on :9093. Plus the Scala-2.13-distro / JDK-17 add-opens notes.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>